work on TaskTimePicker

--- a/android/project.properties
+++ b/android/project.properties
@@ -13,3 +13,5 @@
 # Project target.
 target=android-17
 android.library.reference.1=..\\ActionBarSherlock
+android.library.reference.3=../NumberPicker
+android.library.reference.2=../NineOldAndroids
