--- a/android/project.properties
+++ b/android/project.properties
@@ -12,6 +12,6 @@
 
 # Project target.
 target=android-17
-android.library.reference.1=..\\ActionBarSherlock
-android.library.reference.3=../NumberPicker
-android.library.reference.2=../NineOldAndroids
+android.library.reference.1=../libraries/ActionBarSherlock/library
+android.library.reference.3=../libraries/numberpicker/lib
+android.library.reference.2=../libraries/NineOldAndroids/library
