switched back to old data scheme

--- a/android/AndroidManifest.xml
+++ b/android/AndroidManifest.xml
@@ -4,27 +4,32 @@
     android:versionCode="1"
     android:versionName="1.0" >
 
-    <uses-sdk
-        android:minSdkVersion="7"
-        android:targetSdkVersion="17" />
+    <uses-sdk android:minSdkVersion="7" android:targetSdkVersion="17" />
 
-    <application
-        android:allowBackup="true"
-        android:icon="@drawable/ic_launcher"
+    <application android:name="TaskTimerApplication"
         android:label="@string/app_name"
+        android:icon="@drawable/ic_launcher"
         android:theme="@style/AppTheme"
-        android:name=".TaskTimerApplication">
+        android:allowBackup="true">
         
-        <activity android:name=".MainActivity" android:label="@string/app_name">
+        <activity android:name="MainActivity" android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.DEFAULT" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".SettingsActivity" android:label="@string/menu_settings"></activity>
         
-        <service android:description="@string/service_description" android:name=".TaskService" android:label="@string/service_label"></service>
+        <activity android:name="SettingsActivity"
+            android:label="@string/menu_settings"
+            android:excludeFromRecents="true">
+        </activity>
+        
+        <service android:name="TaskService"
+            android:label="@string/service_label"
+            android:description="@string/service_description"
+            android:process=":TaskService">
+        </service>
         
     </application>
-
 </manifest>
