--- a/android/AndroidManifest.xml
+++ b/android/AndroidManifest.xml
@@ -6,13 +6,13 @@
 
     <uses-sdk android:minSdkVersion="7" android:targetSdkVersion="17" />
 
-    <application android:name="TaskTimerApplication"
+    <application android:name=".TaskTimerApplication"
         android:label="@string/app_name"
         android:icon="@drawable/ic_launcher"
         android:theme="@style/AppTheme"
         android:allowBackup="true">
         
-        <activity android:name="MainActivity" android:label="@string/app_name">
+        <activity android:name=".context.MainActivity" android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.DEFAULT" />
@@ -20,12 +20,12 @@
             </intent-filter>
         </activity>
         
-        <activity android:name="SettingsActivity"
+        <activity android:name=".context.SettingsActivity"
             android:label="@string/menu_settings"
             android:excludeFromRecents="true">
         </activity>
         
-        <service android:name="TaskService"
+        <service android:name=".context.TaskService"
             android:label="@string/service_label"
             android:description="@string/service_description"
             android:process=":TaskService">
