--- a/android/AndroidManifest.xml
+++ b/android/AndroidManifest.xml
@@ -5,6 +5,7 @@
     android:versionName="1.0"
     android:installLocation="auto">
 
+    <!-- Minimum Android version 2.1 -->
     <uses-sdk android:minSdkVersion="7" android:targetSdkVersion="17" />
 
     <application android:name=".TaskTimerApplication"
@@ -13,6 +14,7 @@
         android:theme="@style/AppTheme"
         android:allowBackup="true">
         
+        <!-- The main activity -->
         <activity android:name=".context.MainActivity" android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -21,17 +23,20 @@
             </intent-filter>
         </activity>
         
+        <!-- The settings activity -->
         <activity android:name=".context.SettingsActivity"
             android:label="@string/menu_settings"
             android:excludeFromRecents="true">
         </activity>
         
+        <!-- The task service -->
         <service android:name=".context.TaskService"
             android:label="@string/service_label"
             android:description="@string/service_description"
             android:process=":TaskService">
         </service>
         
+        <!-- The receiver -->
         <receiver android:name=".utilities.TaskTimerReceiver">
             <action android:name="start_app" />
         </receiver>
