--- a/android/project.properties
+++ b/android/project.properties
@@ -12,6 +12,7 @@
 
 # Project target.
 target=android-17
-android.library.reference.1=../libraries/ActionBarSherlock/library
-android.library.reference.3=../libraries/numberpicker/lib
-android.library.reference.2=../libraries/NineOldAndroids/library
+android.library.reference.1=../../Android/libraries/ActionBarSherlock/library
+android.library.reference.2=../../Android/libraries/NineOldAndroids/library
+android.library.reference.3=../../Android/libraries/numberpicker/lib
+
