--- a/android/AndroidManifest.xml
+++ b/android/AndroidManifest.xml
@@ -15,7 +15,10 @@
         android:allowBackup="true">
         
         <!-- The main activity -->
-        <activity android:name=".context.MainActivity" android:label="@string/app_name">
+        <activity android:name=".context.MainActivity"
+            android:label="@string/app_name"
+            android:launchMode="singleTask">
+
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.DEFAULT" />
