--- a/android/AndroidManifest.xml
+++ b/android/AndroidManifest.xml
@@ -16,8 +16,7 @@
         
         <!-- The main activity -->
         <activity android:name=".context.MainActivity"
-            android:label="@string/app_name"
-            android:launchMode="singleTask">
+            android:label="@string/app_name">
 
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
