--- a/android/AndroidManifest.xml
+++ b/android/AndroidManifest.xml
@@ -15,7 +15,7 @@
         android:allowBackup="true">
 
         <!-- The content provider -->
-        <provider android:name=".data.TaskTimerProvider" android:authorities="com.gawdl3y.android.tasktimer" />
+        <provider android:name=".data.TaskTimerProvider" android:authorities="com.gawdl3y.android.tasktimer.provider" />
         
         <!-- The main activity -->
         <activity android:name=".context.MainActivity"
