--- a/android/project.properties
+++ b/android/project.properties
@@ -8,11 +8,10 @@
 # project structure.
 #
 # To enable ProGuard to shrink and obfuscate your code, uncomment this (available properties: sdk.dir, user.home):
-#proguard.config=${sdk.dir}/tools/proguard/proguard-android.txt:proguard-project.txt
+proguard.config=${sdk.dir}/tools/proguard/proguard-android.txt:proguard-project.txt
 
 # Project target.
 target=android-17
-android.library.reference.1=../../Android/libraries/ActionBarSherlock/library
-android.library.reference.2=../../Android/libraries/NineOldAndroids/library
-android.library.reference.3=../../Android/libraries/numberpicker/lib
+android.library.reference.1=../../Android/libraries/android-betterpickers/library
+
 
