--- a/android/TaskTimer/src/main/AndroidManifest.xml
+++ b/android/TaskTimer/src/main/AndroidManifest.xml
@@ -26,7 +26,7 @@
 
         <!-- The main activity -->
         <activity
-            android:name=".context.MainActivity"
+            android:name=".activities.MainActivity"
             android:label="@string/app_name">
 
             <intent-filter>
@@ -39,7 +39,7 @@
 
         <!-- The settings activity -->
         <activity
-            android:name=".context.SettingsActivity"
+            android:name=".activities.SettingsActivity"
             android:label="@string/menu_settings"
             android:excludeFromRecents="true">
         </activity>
