Changed the way the notification ringtone is played to the proper method, and added default vibration/lights

--- a/android/TaskTimer/src/main/AndroidManifest.xml
+++ b/android/TaskTimer/src/main/AndroidManifest.xml
@@ -10,6 +10,9 @@
         android:minSdkVersion="14"
         android:targetSdkVersion="18" />
 
+    <!-- Permissions -->
+    <uses-permission android:name="android.permission.VIBRATE" />
+
     <!-- The application -->
     <application
         android:name=".TaskTimerApplication"
@@ -53,4 +56,5 @@
         </receiver>
 
     </application>
+
 </manifest>
